<resources>
    <string name="app_name">Ashiato</string>
    <string name="main_title">Ashiato</string>
    <string name="privacy_policy_url">https://gist.githubusercontent.com/kaleidot725/3e0146c62376b098f396e0458cde5345/raw/5abf33ca743070dfec3e8791e748b8e594a7ec42/ashiato-privacy-policy.txt</string>
    <!-- Main -->
    <string name="navtitle_home">Home</string>
    <string name="navtitle_history">History</string>
    <string name="navtitle_setting">Setting</string>

    <string name="edittitle_format">Format</string>
    <string name="edittitle_style">Style</string>
    <string name="edittitle_color">Color</string>
    <string name="edittitle_position">Position</string>
    <string name="edittitle_rotation">Rotation</string>

    <!-- Main -> Home -->
    <string name="altitude">ALT</string>
    <string name="latitude">LAT</string>
    <string name="longitude">LNG</string>
    <string name="takeapicture">Take A PICTURE</string>

    <!-- Main -> History -->
    <string name="nohistory">NO HISTORY</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!-- SettingList -> Setting -->
    <string name="menu_setting">Setting</string>
    <string name="menu_license">License</string>
    <string name="menu_contanct">Contact</string>
    <string name="menu_privacy">Privacy Policy</string>

    <string name="gps">GPS</string>
    <string name="acurracy_setting">Acurracy Setting</string>
    <string name="provider">Provider</string>
    <string name="minTime">MinTime</string>
    <string name="minDistance">MinDistance</string>

    <string name="gpssetting_gps">GPS</string>
    <string name="gpssetting_network">Network</string>

    <string-array name="gps_mintime">
        <item>1Sec</item>
        <item>5Sec</item>
        <item>10Sec</item>
        <item>15Sec</item>
        <item>30Sec</item>
        <item>60Sec</item>
    </string-array>

    <string-array name="gps_mindistance">
        <item>1m</item>
        <item>5m</item>
        <item>10m</item>
        <item>25m</item>
        <item>50m</item>
        <item>100m</item>
    </string-array>

    <!-- SettingList -> Contact -->
    <string name="developer">Developer</string>
    <string name="twitter">Twitter</string>
    <string name="github">GitHub</string>
    <string name="email">Email</string>
    <string name="separator">:</string>

    <!-- AdMob -->
    <string name="admob_app_id">ca-app-pub-6306836711962723/8153033013</string>

    <!-- permissions -->
    <string name="permissoin_message">
        This application requires multiple permission.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
